fix z-index Fixed an issue occurring on Firefox by adding a negative z-index to the loader, allowing links to be clickable

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,6 +81,7 @@ body {
   to {
     opacity: 0;
     display: none;
+    z-index: -10;
   }
 }
 .loader__letters {
