--- a/sass/components/loader.scss
+++ b/sass/components/loader.scss
@@ -20,6 +20,7 @@
     to {
       opacity: 0;
       display: none;
+      z-index: -10;
     }
   }
 
